Update portfolio with responsive design and mobile navigation

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,21 @@
+# OS files
 .DS_Store
-node_modules/
-.env
+Thumbs.db
+
+# Editor directories and files
+.idea/
 .vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Logs
+logs
 *.log
-Thumbs.db 
+npm-debug.log*
+
+# Dependencies
+node_modules/
+.env 
